improve cors handling

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,28 +10,16 @@ spring:
       discovery:
         locator:
           enabled: true
-      globalcors:
-        cors-configurations:
-          '[/**]':
-            allow-credentials: true
-            allowed-methods: [GET,HEAD,POST,PUT,DELETE,PATCH,TRACE,CONNECT]
-            allowed-origins:
-              - http://localhost
-              - http://localhost:3000
-              - http://localhost:4000
-              - http://localhost:5000
-              - http://localhost:6000
-              - http://localhost:7000
-              - http://localhost:8000
-              - http://localhost:8080
-              - http://localhost:9000
-              - http://localhost:10000
   application:
     name: gateway
 server:
-  port: 8084
+  port: 8777
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+gateway:
+  cors:
+    allow-credentials: true
+    allowed-methods: [GET,HEAD,POST,PUT,DELETE,PATCH,TRACE,CONNECT]
