--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,13 @@
         <version>2.1.9.RELEASE</version> <!-- lookup parent from repository -->
     </parent>
 
-    <properties>
-        <java.version>11</java.version>
-        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-    </properties>
-
     <dependencies>
+        <dependency>
+            <artifactId>jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <scope>provided</scope>
+            <version>3.0.2</version>
+        </dependency>
         <dependency>
             <artifactId>spring-boot-starter-actuator</artifactId>
             <groupId>org.springframework.boot</groupId>
@@ -51,6 +52,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <properties>
+        <java.version>8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
