add loader.path support to load extra components(such as auth filters)

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
       <plugin>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <groupId>org.springframework.boot</groupId>
+        <configuration>
+          <layout>ZIP</layout>
+        </configuration>
       </plugin>
     </plugins>
   </build>
