--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.1.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'org.springframework.boot' version '2.4.5'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
 
 group = 'com.github.rainmanhhh'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+version = '1.0.0'
+sourceCompatibility = '11'
 
 configurations {
 	compileOnly {
@@ -25,18 +25,16 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "Hoxton.SR6")
+	set('springCloudVersion', "2020.0.2")
 }
 
 dependencies {
   implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-  implementation 'com.google.code.findbugs:annotations:3.0.1'
+  compileOnly 'com.google.code.findbugs:jsr305:3.0.2' // for @Nonnull(when = javax.annotation.meta.When.MAYBE)
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
