--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,27 @@
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+eureka:
+  client:
+    enabled: false
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka
+spring:
+  cloud:
+    gateway:
+      globalcors:
+        add-to-simple-url-handler-mapping: true
+        cors-configurations:
+          '[/**]':
+            allowed-methods: '*'
+            allowed-headers: '*'
+            allowed-origin-patterns:
+              - 'http://localhost:3000'
+              - 'http://localhost:4000'
 logging:
   level:
-    root: debug
+    root: info
+    web: debug
+ez:
+  auth:
+    service-api-key:
+      value: 98765432109876543210987654321021
+  jwt:
+    secret-key: 12345678901234567890123456789012
