--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,4 @@
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka
 spring:
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-  application:
-    name: gateway
-server:
-  port: 8777
-gateway:
-  cors:
-    allow-credentials: true
-    allowed-methods: [GET,HEAD,POST,PUT,DELETE,PATCH,TRACE,CONNECT]
-    allowed-origins: ["*"]
-logging:
-  level:
-    com.netflix.discovery.shared.resolver.aws.ConfigClusterResolver: WARN
+  profiles:
+    include: ms,common
+    active: dev
