--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,14 +7,19 @@ spring:
   cloud:
     gateway:
       globalcors:
-        add-to-simple-url-handler-mapping: true
         cors-configurations:
           '[/**]':
-            allowed-methods: '*'
-            allowed-headers: '*'
             allowed-origin-patterns:
               - 'http://localhost:3000'
               - 'http://localhost:4000'
+      routes:
+        - id: gatewayAdmin
+          uri: http://127.0.0.1:${server.port}
+          predicates:
+            - Path=/GatewayAdmin/**
+          filters:
+            - StripPrefix=1
+            - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin Access-Control-Expose-Headers
 logging:
   level:
     root: info
