--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>eureka-gateway</artifactId>
-  <version>1.0.4</version>
+  <version>2.0.1</version>
   <name>eureka-gateway</name>
   <parent>
     <groupId>com.github.rainmanhhh</groupId>
     <artifactId>spring-kotlin-parent</artifactId>
-    <version>1.0.7</version>
+    <version>2.0.1</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <dependencies>
     <dependency>
       <groupId>com.github.rainmanhhh</groupId>
       <artifactId>gateway-server-spring-boot-starter</artifactId>
-      <version>1.0.5</version>
+      <version>2.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
