--- a/src/main/resources/application-common.yml
+++ b/src/main/resources/application-common.yml
@@ -2,7 +2,13 @@ eureka:
   instance:
     appname: ${spring.application.name}
     prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
 logging:
+  file:
+    name: logs/${spring.application.name}.log
+  logback:
+    rollingpolicy:
+      max-file-size: 100MB
   level:
     # hide eureka heartbeat log
     com.netflix.discovery.shared.resolver.aws.ConfigClusterResolver: warn
